Added text_sensor support. Improved Uom handling a bit. Improved logging